Fix collapsers controlling collapsers other than their own

--- a/core/ttrpg_scribe/core/flask/static/collapsible.css
+++ b/core/ttrpg_scribe/core/flask/static/collapsible.css
@@ -13,7 +13,7 @@
 .collapser:checked::after {
     content: attr(data-name) ' \FF0D';
 }
-.collapser:checked ~ .collapsible {
+.collapser:checked + .collapsible {
     max-height: initial;
     overflow-y: initial;
 }
